# raven

./: .gitignore
dev/: README.md
dev/rune-pjrt/: README.md  VENDORING.md  dune-project  rune-pjrt.opam
dev/rune-pjrt/bench/: README.md  bench_gpt2_vs_torch.py
dev/rune-pjrt/examples/: README.md  dune  inference_example.ml  lora_example.ml  support.ml  training_example.ml
dev/rune-pjrt/examples/01-inference/: main.ml
dev/rune-pjrt/examples/02-training/: main.ml
dev/rune-pjrt/examples/03-lora/: dune  main.ml
dev/rune-pjrt/lib/: backend.ml  backend.mli  causal_lm.ml  causal_lm.mli  dune  error.ml  error.mli  ir.ml  ir.mli  rune_pjrt.ml  rune_pjrt.mli  rune_pjrt_stubs.c  runtime.ml  runtime.mli  signature.ml  signature.mli  stablehlo.ml  stablehlo.mli  trace.ml  trace.mli
dev/rune-pjrt/lib/config/: discover.ml
dev/rune-pjrt/scripts/: build_plugin.sh  clone_vendor.sh
dev/rune-pjrt/test/: dune  test_examples.ml  test_gpt2_shape.ml  test_runtime.ml  test_trace.ml
